# OWL_Bot

./: channels.txt  displayRoster.py  getRoster.py  getStandings.py  getTeams.py  helpfunction.py  main.py  main2.py  pyproject.toml  roster.py  schedule.py  scheduleAndScores.py  scores.py  scrollReaction.py  showRoster.py  webscraper.py
