[tool.poetry]
name = "repl_python3_beta_OWL-bot"
version = "0.1.0"
description = ""
authors = ["DingleBells <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
prettytable = "^2.1.0"
replit = "^3.1.0"
bs4 = "^0.0.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
